--- a/app/views/employee/index.html
+++ b/app/views/employee/index.html
@@ -1,4 +1,4 @@
-<div class="row-fluid" ng-controller="StaffsController" ng-init="init()">
+<div class="row-fluid" ng-controller="EmployeesController" ng-init="init()">
 	<div class="box span12">
 		<div ng-include="activeView" />		
 	</div>
