--- a/app/views/basicList.html
+++ b/app/views/basicList.html
@@ -49,7 +49,7 @@
 			显示 {{pagination.iStart}} ~ {{pagination.iEnd}} / {{pagination.iTotal}} 条
 		</div>
 		<div class="span12 center">
-			<pagination num-pages="pagination.iPages" current-page="pagination.iPage" previous-text="上一页" next-text="下一页"></pagination>
+			<pagination total-items="pagination.iPages" page="pagination.iPage" items-pre-page="pagination.iLength" previous-text="上一页" next-text="下一页"></pagination>
 		</div>
 	</div>
 </div>
