--- a/app/views/header.html
+++ b/app/views/header.html
@@ -8,96 +8,11 @@
 			</a>
 			<a id="main-menu-toggle" class="hidden-phone open"><i class="icon-reorder"></i></a>		
 			<div class="row-fluid">
-			<a class="brand span2" href="#!/crm"><span>泛卡汇PassProCRM</span></a>
+			<a class="brand span2" href="#!/crm"><span>泛商汇CRM</span></a>
 			</div>		
 			<!-- start: Header Menu -->
 			<div class="nav-no-collapse header-nav">
 				<ul class="nav pull-right">
-					<!-- start: Notifications Dropdown -->
-					<li class="dropdown hidden-phone">
-						<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-							<i class="icon-warning-sign"></i>
-						</a>
-						<ul class="dropdown-menu notifications">
-							<li class="dropdown-menu-title">
-								<span>You have 11 notifications</span>
-							</li>	
-							<li>
-                <a href="#">
-									<span class="icon blue"><i class="icon-user"></i></span>
-									<span class="message">New user registration</span>
-									<span class="time">1 min</span> 
-                </a>
-                              </li>
-							<li>
-                                  <a href="#">
-									<span class="icon green"><i class="icon-comment-alt"></i></span>
-									<span class="message">New comment</span>
-									<span class="time">7 min</span> 
-                                  </a>
-                              </li>
-							<li>
-                                  <a href="#">
-									<span class="icon green"><i class="icon-comment-alt"></i></span>
-									<span class="message">New comment</span>
-									<span class="time">8 min</span> 
-                                  </a>
-                              </li>
-							<li>
-                                  <a href="#">
-									<span class="icon green"><i class="icon-comment-alt"></i></span>
-									<span class="message">New comment</span>
-									<span class="time">16 min</span> 
-                                  </a>
-                              </li>
-							<li>
-                                  <a href="#">
-									<span class="icon blue"><i class="icon-user"></i></span>
-									<span class="message">New user registration</span>
-									<span class="time">36 min</span> 
-                                  </a>
-                              </li>
-							<li>
-                                  <a href="#">
-									<span class="icon yellow"><i class="icon-shopping-cart"></i></span>
-									<span class="message">2 items sold</span>
-									<span class="time">1 hour</span> 
-                                  </a>
-                              </li>
-							<li class="warning">
-                                  <a href="#">
-									<span class="icon red"><i class="icon-user"></i></span>
-									<span class="message">User deleted account</span>
-									<span class="time">2 hour</span> 
-                                  </a>
-                              </li>
-							<li class="warning">
-                                  <a href="#">
-									<span class="icon red"><i class="icon-shopping-cart"></i></span>
-									<span class="message">Transaction was canceled</span>
-									<span class="time">6 hour</span> 
-                                  </a>
-                              </li>
-							<li>
-                                  <a href="#">
-									<span class="icon green"><i class="icon-comment-alt"></i></span>
-									<span class="message">New comment</span>
-									<span class="time">yesterday</span> 
-                                  </a>
-                              </li>
-							<li>
-                                  <a href="#">
-									<span class="icon blue"><i class="icon-user"></i></span>
-									<span class="message">New user registration</span>
-									<span class="time">yesterday</span> 
-                                  </a>
-                              </li>
-                              <li class="dropdown-menu-sub-footer">
-                          		<a>View all notifications</a>
-							</li>	
-						</ul>
-					</li>
-					<!-- end: Notifications Dropdown -->
 					<!-- start: User Dropdown -->
 					<li class="dropdown">
 						<a class="btn account dropdown-toggle" data-toggle="dropdown" href="#">
@@ -108,10 +23,9 @@
 							</div>
 						</a>
 						<ul class="dropdown-menu">
-							<li class="dropdown-menu-title"></li>
-							<li><a href="#" data-toggle="modal"><i class="icon-user"></i> 个人资料 </a></li>
-							<li><a ng-click="showSettingPasswordModal=true"><i class="icon-cog"></i> 设置密码</a></li>
-							<li><a href="#"><i class="icon-envelope"></i> 消息 </a></li>
+							<li class="dropdown-menu-title">我的设置</li>
+							<li><a ng-click="showMeProfile()"><i class="icon-user"></i> 个人资料 </a></li>
+							<li><a ng-click="showChangePasswordDialog()"><i class="icon-cog"></i> 修改密码</a></li>
 							<li><a ng-click="signout()"><i class="icon-off"></i> 登出 </a></li>
 						</ul>
 					</li>
@@ -123,9 +37,8 @@
 	</div>
 </div>
 <!-- Start: Setting Password -->
-<div class="modal hide fade" modal="showSettingPasswordModal" ng-controller="SettingPasswordController">
+<script type="text/ng-template" id="passwordDialog.html">
 	<div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal">×</button>
 		<h3>设置新密码</h3>
 	</div>
 	<div class="modal-body">
@@ -135,25 +48,21 @@
 				请输入新密码
 			</label>
 			<div class="controls">
-			  <input class="input-xlarge span5 focused" ng-model="newPassword" id="new-password" type="password" required>
+			  <input class="input-xlarge span5" ng-model="$parent.newPassword" type="password" required>
 			</div>
 			<label class="control-label" for="new-password">
 				<i class="icon-lock"></i>
 				请重复输入一遍上面的密码
 			</label>
 			<div class="controls">
-			  <input class="input-xlarge span5" ng-model="passwordConfirmation" id="password-confirmation" type="password" required>
+			  <input class="input-xlarge span5" ng-model="$parent.passwordConfirmation" type="password" required>
 			</div>
 	  </div>
-		<div class="alert alert-danger fade in" ng-show="showSettingMessage" style="display: none;">
-      <button type="button" class="close" data-dismiss="alert">×</button>
-      <h4 class="alert-heading">警告！</h4>
-      <p class="ng-binding">{{errorDetail}}</p>
-	  </div>
+    <alert type="alert.type" ng-hide="!alert" close="closeAlert()">{{alert.msg}}</alert>
 	</div>
 	<div class="modal-footer">
-		<a class="btn" data-dismiss="modal">关闭</a>
+		<a class="btn" ng-click="cancel()">关闭</a>
 		<a class="btn btn-primary" ng-click="setPassword()">修改密码</a>
 	</div>
-</div>
+</script>
 <!-- End: Setting Password -->
