--- a/app/views/basicList.html
+++ b/app/views/basicList.html
@@ -25,14 +25,14 @@
 	<table class="table table-striped table-bordered bootstrap-datatable datatable">
 		<thead>
 			<tr>
-				<th ng-repeat="field in fields">{{field.title}}</th>
+				<th ng-repeat="field in fields" ng-show="!field.listHide">{{field.title}}</th>
 				<th>操作</th>
 			</tr>
 		</thead>
 	  <tbody>
 			<tr ng-repeat="entity in entities">
-				<td class="center" ng-repeat="field in fields">
-					<span ng-class="entity.fieldClass[field.name]" ng-if="field.value">{{field.value(entity)}}</span>
+				<td class="center" ng-repeat="field in fields" ng-show="!field.listHide">
+					<span ng-class="entity.fieldClass[field.name]"  ng-if="field.value">{{field.value(entity)}}</span>
 					<span ng-class="entity.fieldClass[field.name]" ng-if="!field.value">{{valueOfKeyString(entity, field.name)}}</span>
 				</td>
 				<td class="center btn-toolbar">
