--- a/app/views/basicList.html
+++ b/app/views/basicList.html
@@ -30,7 +30,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr ng-repeat="entity in entities">
+        <tr ng-repeat="entity in entities" ng-hide="hideRow(entity)">
             <td class="center" ng-repeat="field in fields" ng-show="!field.listHide">
                 <span ng-class="entity.fieldClass[field.name]"  ng-if="field.value">{{field.value(entity)}}</span>
                 <span ng-class="entity.fieldClass[field.name]" ng-if="!field.value">{{valueOfKeyString(entity, field.name)}}</span>
