--- a/app/views/basicProfile.html
+++ b/app/views/basicProfile.html
@@ -20,7 +20,7 @@
 		<div class="span9">
 			<table class="table table-striped">
 			  <tbody>
-					<tr ng-repeat="field in profileFields">
+					<tr ng-repeat="field in profileFields" ng-hide="field.isProfileHide">
 						<td class="center"><h3>{{field.title}}</h3></td>
 						<td class="center">
 							<h4 ng-if="field.value">{{field.value(entity)}}</h4>
