--- a/app/views/Analysis/merchantAnalysis.html
+++ b/app/views/Analysis/merchantAnalysis.html
@@ -2,14 +2,32 @@
   <div class="row-fluid">
     <div class="box">
       <div class="box-header">
-          <h2><i ng-class="currentView.icon"></i><span class="break"></span>{{currentView.name}}</h2>
-          <div class="box-icon">
-              <a ng-click="refreshChart()" class="btn-refresh"><i class="icon-refresh" /></a>
-          </div>
+        <h2>
+          {{currentView.name}}
+        </h2>
       </div>
       <div class="box-content">
-          <div google-chart chart="chart" style="{{chart.cssStyle}}" on-ready="chartReady()"/>
+        <div class="row-fluid">
+          <div class="span1">
+            <div class="btn-group">
+              <button class="btn btn-primary" ng-model="statistics.period" btn-radio="'daily'">日</button>
+              <button class="btn btn-primary" ng-model="statistics.period" btn-radio="'weekly'">周</button>
+              <button class="btn btn-primary" ng-model="statistics.period" btn-radio="'monthly'">月</button>
+            </div>
+          </div>
+          <div class="span2 offset8">
+            <p class="input-group">
+              <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="datapickOpen" max="today" datepicker-options="dateOptions" ng-required="true" show-weeks="false" show-button-bar="false"/>
+            </p>
+          </div>
+          <div class="span1">
+            <button class="btn" ng-click="open($event)">
+              <span class="icon-calendar"></span>
+            </button>
+          </div>
+        </div>
+        <div google-chart="" chart="chart" style="{{chart.cssStyle}}" on-ready="chartReady()">
       </div>
     </div>
   </div>
-</div>				
+</div>
