--- a/app/views/basicList.html
+++ b/app/views/basicList.html
@@ -21,7 +21,8 @@
             </form>
         </div>
     </div>
-
+    <div class="alert alert-info" ng-show="loading">Loading</div>
+    <div ng-show="!loading">
     <table class="table table-striped table-bordered bootstrap-datatable datatable">
         <thead>
         <tr>
@@ -30,7 +31,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr ng-repeat="entity in entities | startFrom: pagination.iStart-1 | limitTo: pagination.iLength">
+        <tr ng-repeat="entity in entities | limitTo: pagination.iLength">
             <td class="center" ng-repeat="field in fields" ng-show="!field.listHide">
                 <span ng-class="entity.fieldClass[field.name]"  ng-if="field.value">{{field.value(entity)}}</span>
                 <span ng-class="entity.fieldClass[field.name]" ng-if="!field.value">{{valueOfKeyString(entity, field.name)}}</span>
@@ -52,4 +53,5 @@
             <pagination total-items="pagination.iTotal" page="pagination.iPage" items-per-page="pagination.iLength" previous-text="上一页" next-text="下一页"></pagination>
         </div>
     </div>
+</div>
 </div>
