--- a/app/views/basicList.html
+++ b/app/views/basicList.html
@@ -21,8 +21,9 @@
             </form>
         </div>
     </div>
-    <div class="alert alert-info" ng-show="loading">Loading</div>
-    <div ng-show="!loading">
+    <div class="alert alert-info" ng-show="loading">载入中</div>
+    <div class="alert alert-info" ng-show="noSearchBack && !loading">抱歉，没有搜索到符合条件的记录</div>
+    <div ng-show="!loading && !noSearchBack" >
     <table class="table table-striped table-bordered bootstrap-datatable datatable">
         <thead>
         <tr>
