--- a/app/views/home.html
+++ b/app/views/home.html
@@ -9,15 +9,11 @@
 				<form class="form-horizontal" autofill-submit="login()" ui-keypress="{13:'Login($event)'}">
 					<fieldset>
 					
-						<input autofill class="input-large span12" ng-model="loginUser.username" name="username" type="text" placeholder="用户名" required />
+						<input class="input-large span12" ng-model="loginUser.username" name="username" type="text" placeholder="用户名" required />
 
-						<input autofill class="input-large span12" ng-model="loginUser.password" name="password" type="password" placeholder="密码" required />
+						<input class="input-large span12" ng-model="loginUser.password" name="password" type="password" placeholder="密码" required />
 
 						<div class="clearfix"></div>
-					
-						<label class="remember" for="remember">
-							<input type="checkbox" id="remember"> 记住我 </input>
-						</label>
 					
 						<div class="clearfix"></div>
 
