--- a/app/views/basicEdit.html
+++ b/app/views/basicEdit.html
@@ -1,5 +1,5 @@
 <div class="box-header">
-	<h2><i class="icon-user-md"></i><span class="break"></span>
+	<h2><i ng-class="currentView.icon"></i><span class="break"></span>
 		<span ng-show='!entity.id'>新增{{currentView.name}}</span>
 		<span ng-show='!!entity.id'>编辑{{currentView.name}}</span>
 	</h2>
