Update: 统计支持批量查询

--- a/app/views/analysis/merchantAnalysis.html
+++ b/app/views/analysis/merchantAnalysis.html
@@ -10,9 +10,9 @@
         <div class="row-fluid">
           <div class="span1">
             <div class="btn-group">
-              <button class="btn btn-primary" ng-model="statistics.period" btn-radio="'daily'">日</button>
-              <button class="btn btn-primary" ng-model="statistics.period" btn-radio="'weekly'">周</button>
-              <button class="btn btn-primary" ng-model="statistics.period" btn-radio="'monthly'">月</button>
+              <button class="btn btn-primary" ng-model="statParam.period" btn-radio="'daily'">日</button>
+              <button class="btn btn-primary" ng-model="statParam.period" btn-radio="'weekly'">周</button>
+              <button class="btn btn-primary" ng-model="statParam.period" btn-radio="'monthly'">月</button>
             </div>
           </div>
           <div class="span2 offset8">
