--- a/app/views/analysis/salesAnalysis.html
+++ b/app/views/analysis/salesAnalysis.html
@@ -5,47 +5,49 @@
                 <h2>
                     <i ng-class="currentView.icon"></i>
                     <span class="break"></span>
-                    {{currentView.name}} ({{stdt|date:"yyyy年MM月dd日"}} ~{{dt|date:"yyyy年MM月dd日"}})
+                    {{currentView.name}} ({{stdt|date:"yyyy年MM月dd日"}} ~{{untilDate|date:"yyyy年MM月dd日"}})
                 </h2>
             </div>
             <div class="box-content">
                 <div class="row-fluid">
-                    <div class="span5"></div>
-                    <div class="span2" style="text-align: center">
+                    <div class="span5" style="text-align: left">
                         <div class="btn-group">
-                            <button type="button" class="btn btn-primary" ng-model="analysisModel"
-                                    btn-radio="'merchant'">
+                            <button ng-click="lvlMove('e20dccdf039b3874')" type="button" class="btn btn-primary" ng-model="analysisModel" btn-radio="'merchant'">
                                 <i ng-class="views[3].icon"></i> 商户
                             </button>
-                            <button type="button" class="btn btn-primary" ng-model="analysisModel" btn-radio="'shop'">
-                                <i ng-class="views[4].icon"></i> 商店
+                            <button ng-click="lvlMove(currentShop.id)" ng-show="!(analysisModel == 'merchant')" type="button" class="btn btn-primary" ng-model="analysisModel" btn-radio="'shop'">
+                                <i ng-class="views[4].icon"></i> {{currentShop.name}}
+                            </button>
+                            <button ng-show="analysisModel == 'employee'" type="button" class="btn btn-primary" ng-model="analysisModel" btn-radio="'employee'">
+                                <i ng-class="views[1].icon"></i> {{currentEmployee.name}}
                             </button>
                         </div>
                     </div>
-                    <div class="span2 row-fluid" style="text-align: right">
-                        <label class="row">所有商店</label>
+                    <div class="span2" style="text-align: center">
+                        <button ng-show = "analysisModel == 'merchant'" type="button" class="btn btn-primary" ng-model="shopsDiv" btn-checkbox btn-checkbox-true="true" btn-checkbox-false="false">
+                            所有商店
+                        </button>
+                        <button ng-show = "analysisModel == 'shop'" type="button" class="btn btn-primary" ng-model="shopsDiv" btn-checkbox btn-checkbox-true="true" btn-checkbox-false="false">
+                            所有员工
+                        </button>
                     </div>
-                    <div class="span1" style="text-align: left">
-                        <input class="row" type="checkbox" ng-model="allShops"/>
-                    </div>
-                    <div class="span2" style="text-align: right">
-                        <select ng-disabled="allShops" ng-show="onShop" style="width: 150px" ng-model="shop" ng-options="shop.name for shop in shops|orderBy:columnSort.sortColumn:columnSort.reverse">
-                            <option value="">-----选择商店-----</option>
+                    <div class="span5" style="text-align: right">
+                        <select ng-show="analysisModel == 'shop'" style="width: 150px; height: 25px" ng-model="currentShop" ng-options="currentShop.name for currentShop in currentShops|orderBy:columnSort.sortColumn:columnSort.reverse">
+                        </select>
+                        <select ng-show="analysisModel == 'employee'" style="width: 150px; height: 25px" ng-model="currentEmployee" ng-options="currentEmployee.name for currentEmployee in currentEmployees|orderBy:columnSort.sortColumn:columnSort.reverse">
                         </select>
                     </div>
                 </div>
                 <div class="span12">
-                <div class="span4" style="text-align: right" ng-show="onShop">
-                    <div google-chart="" chart="pieChart" style="{{chart.cssStyle}}" on-ready="chartReady()"></div>
+                <div class="span4" style="text-align: right" ng-show="dualChart">
+                    <div google-chart="" chart="offChart" style="{{offChart.cssStyle}}" on-ready="chartReady()"></div>
                 </div>
-                <div ng-class="areaChartFull" style="text-align: right">
-                    <div google-chart="" chart="chart" style="{{chart.cssStyle}}" on-ready="chartReady()"></div>
+                <div ng-class="primaryChartFull" style="text-align: right">
+                    <div google-chart="" chart="primaryChart" style="{{primaryChart.cssStyle}}" on-ready="chartReady()"></div>
                 </div>
                 </div>
-
 
                 <fieldset class="span6" style="text-align: center;">
-                    <legend style="width:inherit; padding:0 10px; border-bottom:none;">统计时段</legend>
                     <div class="btn-group">
                         <button type="button" class="btn btn-success" ng-model="periodModel"
                                 btn-radio="'lastWeek'" >
@@ -65,7 +67,6 @@
                 </fieldset>
 
                 <fieldset style="text-align: center;">
-                    <legend style="width:inherit; padding:0 10px; border-bottom:none;">统计单位</legend>
                     <div class="btn-group">
                         <button type="button" class="btn btn-info" ng-model="unitModel"
                                 btn-radio="'daily'">
@@ -75,7 +76,7 @@
                                 btn-radio="'weekly'" ng-disabled="weekDisable">
                             周
                         </button>
-                        <button type="button" class="btn btn-info" ng-model="unitModel"
+                        <button ng-click="setRefresh()" type="button" class="btn btn-info" ng-model="unitModel"
                                 btn-radio="'monthly'" ng-disabled="monthDisable">
                             月
                         </button>
@@ -83,31 +84,23 @@
                     </div>
                 </fieldset>
                 <hr>
-                <div style="width: 100%">
-                    <table style="margin-bottom: 0px" class="table table-striped table-bordered bootstrap-datatable datatable">
+                <div style="width: 100%" ng-show="(shopsDiv == true)">
+                    <table style="margin-bottom: -5px" class="table table-striped table-bordered bootstrap-datatable datatable">
                         <thead style="background-color: #dcdcdc">
                         <th style="width: 16%" ng-repeat="header in headers">
                             <a ng-click="columnSort.sortColumn=headers[$index];columnSort.reverse=!columnSort.reverse">{{ headersZ[$index] }}</a>
                         </th>
                         </thead>
                     </table>
-                    <div style="display: block; height: 170px; overflow-y: auto">
+                    <div style="display: block; height: 200px; overflow-y: auto">
                     <table class="table table-striped table-bordered bootstrap-datatable datatable">
                         <tbody >
-                        <tr ng-show="!onShop" ng-repeat="shop in shops|orderBy:columnSort.sortColumn:columnSort.reverse">
-                            <td style="width: 20%"><a ng-click="toSingleShop(shop)">{{shop.name}}</a></td>
-                            <td style="width: 20%">{{shop.sale}}</td>
-                            <td style="width: 20%">{{shop.percentage}}%</td>
+                        <tr ng-repeat="tbRow in tbRows|orderBy:columnSort.sortColumn:columnSort.reverse">
+                            <td style="width: 20%"><a ng-click="lvlMove(tbRow)">{{tbRow.name}}</a></td>
+                            <td style="width: 20%">{{tbRow.sale}}</td>
+                            <td style="width: 20%">{{tbRow.percentage}}%</td>
                             <td style="width: 20%">N/A</td>
                             <td style="width: 20%">N/A</td>
-                        </tr>
-                        <tr ng-show="onShop" ng-repeat="item in items|orderBy:columnSort.sortColumn:columnSort.reverse">
-                            <td style="width: 16%">{{item.name}}</a></td>
-                            <td style="width: 16%">{{item.sale}}</td>
-                            <td style="width: 16%">{{item.quantity}}</td>
-                            <td style="width: 16%">{{item.percentage}}%</td>
-                            <td style="width: 16%">N/A</td>
-                            <td style="width: 16%">N/A</td>
                         </tr>
                         </tbody>
                     </table>
