--- a/app/views/basicProfile.html
+++ b/app/views/basicProfile.html
@@ -15,7 +15,7 @@
 	<div class="span12">
 		<div class="span1" />
 		<div class="span1" ng-show="profileAvatar">
-			<img src={{profileAvatar}} alt="Avatar" class="img-circle">
+			<img ng-src={{profileAvatar}} alt="Avatar" class="img-circle">
 		</div>
 		<div class="span9">
 			<table class="table table-striped">
