--- a/app/views/devices/register.html
+++ b/app/views/devices/register.html
@@ -18,7 +18,8 @@
         </div>
       </div>
       <div class="control-group"><hr></div>
-      <div class="control-group">
+      <div ng-include="editView" />
+      <!-- <div class="control-group">
         <label class="control-label">归属商店</label>
         <div class="controls">
           <div class="input-prepend">
@@ -28,7 +29,7 @@
           </div>
           <i class="icon-asterisk"></i>
         </div>
-      </div>
+      </div> -->
       <div class="control-group">
         <label class="control-label">新编号</label>
         <div class="controls">
@@ -57,23 +58,3 @@
     </fieldset>
   </form>
 </div>
-
-<script type="text/ng-template" id="chooseShopModalContent.html">
-  <div class="modal-header">
-    <h3>选择商店: {{ selected.shop.name }}</h3>
-  </div>
-  <div class="modal-body">
-    <div ng-if="shops.length === 0" class="span2 offset2">
-      <i class="icon-spinner icon-spin icon-4x" ></i>
-    </div>
-    <ul>
-      <li ng-repeat="shop in shops">
-        <a ng-click="selected.shop = shop">{{ shop.name }}</a>
-      </li>
-    </ul>
-  </div>
-  <div class="modal-footer">
-    <button class="btn btn-primary" ng-disabled="!selected.shop" ng-click="ok()">选择</button>
-    <button class="btn btn-warning" ng-click="cancel()">取消</button>
-  </div>
-</script>
