--- a/app/views/analysis/salesAnalysis.html
+++ b/app/views/analysis/salesAnalysis.html
@@ -96,7 +96,7 @@
                     <table class="table table-striped table-bordered bootstrap-datatable datatable">
                         <tbody >
                         <tr ng-repeat="tbRow in tbRows|orderBy:columnSort.sortColumn:columnSort.reverse">
-                            <td style="width: 20%"><a ng-click="lvlMove(tbRow)">{{tbRow.name}}</a></td>
+                            <td style="width: 20%"><a href="" ng-click="lvlMove(tbRow)">{{tbRow.name}}</a></td>
                             <td style="width: 20%">{{tbRow.sale}}</td>
                             <td style="width: 20%">{{tbRow.percentage}}%</td>
                             <td style="width: 20%">N/A</td>
