--- a/app/views/analysis/salesAnalysis.html
+++ b/app/views/analysis/salesAnalysis.html
@@ -5,12 +5,12 @@
                 <h2>
                     <i ng-class="currentView.icon"></i>
                     <span class="break"></span>
-                    {{currentView.name}} ({{stdt|date:"yyyy年MM月dd日"}} ~{{untilDate|date:"yyyy年MM月dd日"}})
+                    {{currentView.name}} <!--({{stdt|date:"yyyy年MM月dd日"}} ~{{untilDate|date:"yyyy年MM月dd日"}})-->
                 </h2>
             </div>
             <div class="box-content">
                 <div class="row-fluid">
-                    <div class="span5" style="text-align: left">
+                    <div class="span3" style="text-align: left">
                         <div class="btn-group">
                             <button ng-click="lvlMove('e20dccdf039b3874')" type="button" class="btn btn-primary" ng-model="analysisModel" btn-radio="'merchant'">
                                 <i ng-class="views[3].icon"></i> 商户
@@ -23,50 +23,63 @@
                             </button>
                         </div>
                     </div>
-                    <div class="span2" style="text-align: center">
-                        <button ng-show = "analysisModel == 'merchant'" type="button" class="btn btn-primary" ng-model="shopsDiv" btn-checkbox btn-checkbox-true="true" btn-checkbox-false="false">
-                            所有商店
-                        </button>
-                        <button ng-show = "analysisModel == 'shop'" type="button" class="btn btn-primary" ng-model="shopsDiv" btn-checkbox btn-checkbox-true="true" btn-checkbox-false="false">
-                            所有员工
-                        </button>
+                    <div class="span6" style="text-align: center">
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-success" ng-model="periodModel"
+                                    btn-radio="'lastWeek'" >
+                                前7天
+                            </button>
+                            <button type="button" class="btn btn-success" ng-model="periodModel"
+                                    btn-radio="'lastMonth'">
+                                前30天
+                            </button>
+                            <button type="button" class="btn btn-success" ng-model="periodModel"
+                                    btn-radio="'custom'" onclick="$('#dateRange').click();">
+                                <i class="icon-calendar"></i>
+                            </button>
+                        </div>
+                        <input format="YYYY年MM月DD日" style="width: 222px;height: 25px; background-color: floralwhite" id="dateRange" type="daterange"
+                               ng-model="dateRange" disabled="true">
                     </div>
-                    <div class="span5" style="text-align: right">
-                        <select ng-show="analysisModel == 'shop'" style="width: 150px; height: 25px" ng-model="currentShop" ng-options="currentShop.name for currentShop in currentShops|orderBy:columnSort.sortColumn:columnSort.reverse">
-                        </select>
-                        <select ng-show="analysisModel == 'employee'" style="width: 150px; height: 25px" ng-model="currentEmployee" ng-options="currentEmployee.name for currentEmployee in currentEmployees|orderBy:columnSort.sortColumn:columnSort.reverse">
-                        </select>
+                    <div class="span3" style="text-align: right">
+                        <div class="row-fluid">
+                            <div class="span6">
+                                <select ng-show="analysisModel == 'shop'" style="width: 150px; height: 30px"
+                                        ng-model="currentShop"
+                                        ng-options="currentShop.name for currentShop in currentShops|orderBy:columnSort.sortColumn:columnSort.reverse">
+                                </select>
+                                <select ng-show="analysisModel == 'employee'" style="width: 150px; height: 30px"
+                                        ng-model="currentEmployee"
+                                        ng-options="currentEmployee.name for currentEmployee in currentEmployees|orderBy:columnSort.sortColumn:columnSort.reverse">
+                                </select>
+                            </div>
+                            <div class="span6">
+                                <button ng-show="analysisModel == 'merchant'" type="button" class="btn btn-primary"
+                                        ng-model="shopsDiv" btn-checkbox btn-checkbox-true="true"
+                                        btn-checkbox-false="false">
+                                    所有商店
+                                </button>
+                                <button ng-show="analysisModel == 'shop'" type="button" class="btn btn-primary"
+                                        ng-model="shopsDiv" btn-checkbox btn-checkbox-true="true"
+                                        btn-checkbox-false="false">
+                                    所有员工
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="span12">
-                <div class="span4" style="text-align: right" ng-show="dualChart">
-                    <div google-chart="" chart="offChart" style="{{offChart.cssStyle}}" on-ready="chartReady()"></div>
-                </div>
-                <div ng-class="primaryChartFull" style="text-align: right">
-                    <div google-chart="" chart="primaryChart" style="{{primaryChart.cssStyle}}" on-ready="chartReady()"></div>
-                </div>
+                <div class="row-fluid">
+                    <div class="span4" style="text-align: right" ng-show="dualChart">
+                        <div google-chart="" chart="offChart" style="{{offChart.cssStyle}}"
+                             on-ready="chartReady()"></div>
+                    </div>
+                    <div ng-class="primaryChartFull" style="text-align: right">
+                        <div google-chart="" chart="primaryChart" style="{{primaryChart.cssStyle}}"
+                             on-ready="chartReady()"></div>
+                    </div>
                 </div>
 
-                <fieldset class="span6" style="text-align: center;">
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-success" ng-model="periodModel"
-                                btn-radio="'lastWeek'" >
-                            前7天
-                        </button>
-                        <button type="button" class="btn btn-success" ng-model="periodModel"
-                                btn-radio="'lastMonth'">
-                            前30天
-                        </button>
-                        <button type="button" class="btn btn-success" ng-model="periodModel"
-                                btn-radio="'custom'" onclick="$('#dateRange').click();">
-                            <i class="icon-calendar"></i>
-                        </button>
-                    </div>
-                    <input format="YYYY年MM月DD日" style="width: 222px;" id="dateRange" type="daterange"
-                           ng-model="dateRange" disabled="true">
-                </fieldset>
-
-                <fieldset style="text-align: center;">
+                <fieldset ng-show="" style="text-align: center;">
                     <div class="btn-group">
                         <button type="button" class="btn btn-info" ng-model="unitModel"
                                 btn-radio="'daily'">
@@ -80,7 +93,6 @@
                                 btn-radio="'monthly'" ng-disabled="monthDisable">
                             月
                         </button>
-
                     </div>
                 </fieldset>
                 <hr>
@@ -88,7 +100,7 @@
                     <table style="margin-bottom: -5px" class="table table-striped table-bordered bootstrap-datatable datatable">
                         <thead style="background-color: #dcdcdc">
                         <th style="width: 16%" ng-repeat="header in headers">
-                            <a ng-click="columnSort.sortColumn=headers[$index];columnSort.reverse=!columnSort.reverse">{{ headersZ[$index] }}</a>
+                            <a href="" ng-click="columnSort.sortColumn=headers[$index];columnSort.reverse=!columnSort.reverse">{{ headersZ[$index] }}</a>
                         </th>
                         </thead>
                     </table>
