--- a/app/views/basicProfile.html
+++ b/app/views/basicProfile.html
@@ -15,7 +15,7 @@
 	<div class="col-lg-12">
     <div class="col-lg-1 col-md-2 col-xs-6" />
 		<div class="col-lg-1 col-md-2 col-xs-6" ng-show="profileAvatar">
-			<img src={{profileAvatar}} alt="Avatar" class="img-circle">
+			<img ng-src={{profileAvatar}} alt="Avatar" class="img-circle">
 		</div>
 		<div class="col-lg-8 col-md-10 col-xs-12">
 			<table class="table table-striped">
