--- a/app/views/basicList.html
+++ b/app/views/basicList.html
@@ -11,7 +11,7 @@
           <div class="col-lg-4">
             <select class="form-control" ng-model="pagination.iLength" ng-options="option for option in pagination.iLengthOptions"></select>
           </div>
-          <h4 class="col-lg-2">条/页</h3>
+          <h4 class="col-lg-2">条/页</h4>
         </div>
         <div class="col-lg-4">
             <form class="form-search" ng-model="searchOptions">
@@ -42,7 +42,7 @@
                 <span ng-class="entity.fieldClass[field.name]" ng-if="!field.value">{{valueOfKeyString(entity, field.name)}}</span>
             </td>
             <td class="center btn-toolbar">
-                <a ng-repeat="op in fieldOperations" ng-class="op.class" title="{{op.title}}" ng-click="operateFunc(entity, op.op)" class="btn">
+                <a ng-repeat="op in fieldOperations" ng-class="op.class" title="{{op.title}}" ng-click="operateFunc(entity, op.op)" class="" style="margin-left: 5px; margin-right: 5px">
                 <i ng-class="op.icon"></i>
                 </a>
             </td>
@@ -55,7 +55,7 @@
             显示 {{pagination.iStart}} ~ {{pagination.iEnd}} / {{pagination.iTotal}} 条
         </div>
         <div class="col-lg-12 center">
-            <pagination total-items="pagination.iTotal" page="pagination.iPage" items-per-page="pagination.iLength" previous-text="上一页" next-text="下一页"></pagination>
+            <pagination total-items="pagination.iTotal" page="pagination.iPage" max-size="pagination.maxSize"  rotate="false" previous-text="上一页" next-text="下一页"></pagination>
         </div>
     </div>
 </div>
