fix 框架调整 close #89

--- a/app/views/basicList.html
+++ b/app/views/basicList.html
@@ -1,18 +1,36 @@
 <div class="box-header">
-    <h2><i ng-class="currentView.icon"></i><span class="break"></span>{{currentView.name}}</h2>
-    <div class="box-icon">
-        <a ng-click="showCreate()" class="btn-puls" ng-hide="isHide"><i class="fa fa-plus" /></a>
-        <a ng-click="refreshList()" class="btn-refresh"><i class="fa fa-refresh" /></a>
+    <div class="row">
+        <div class="col-xs-4">
+            <ol class="breadcrumb" style="background-color: #36a9e1; margin: 0px; padding: 0px; padding-left: 0px; margin-bottom: 0px; margin-top: 8px; margin-left: 15px;" >
+                <li ng-if="viewName"><a style="color: #fff">{{viewName}}</a></li>
+                <li ng-if="viewName == currentView.name"><a style="color: #fff">{{currentView.submenus[0].name}}</a></li>
+                <li ng-if="viewName != currentView.name"><a style="color: #fff">{{currentView.name}}</a></li>
+            </ol>
+            <!--<h2><i ng-class="currentView.icon"></i><span class="break"></span>{{currentView.name}}</h2>-->
+        </div>
+        <div class="col-xs-6"></div>
+        <div class="col-xs-2">
+            <div class="box-icon">
+                <a ng-click="showCreate()" class="btn-puls" ng-hide="isHide"><i class="fa fa-plus" /></a>
+                <a ng-click="refreshList()" class="btn-refresh"><i class="fa fa-refresh" /></a>
+            </div>
+        </div>
     </div>
+
 </div>
 <div class="box-content">
     <div class="row">
-        <div class="col-lg-6">
-          <div class="col-lg-4">
-            <select class="form-control" ng-model="pagination.iLength" ng-options="option for option in pagination.iLengthOptions"></select>
-          </div>
-          <h4 class="col-lg-2">条/页</h4>
+        <div class="col-lg-2">
+            <div class="row">
+                <div class="col-lg-8">
+                    <select class="form-control" ng-model="pagination.iLength" ng-options="option for option in pagination.iLengthOptions"></select>
+                </div>
+                <div class="col-lg-4">
+                    <h4>条/页</h4>
+                </div>
+            </div>
         </div>
+        <div class="col-lg-6"></div>
         <div class="col-lg-4">
             <form class="form-search" >
                 <div class="input-group">
