--- a/app/views/analysis/salesAnalysis.html
+++ b/app/views/analysis/salesAnalysis.html
@@ -1,4 +1,4 @@
-<div class="row" ng-controller="SalesAnalysisController" ng-init="init()">
+<div class="row" ng-controller="SalesAnalysisController">
     <div class="row" style="padding-left: 20px; padding-right: 20px">
         <div class="box">
             <div class="box-header">
