--- a/app/views/header.html
+++ b/app/views/header.html
@@ -38,27 +38,63 @@
 		<h3>设置新密码</h3>
 	</div>
 	<div class="modal-body">
-		<div class="form-group">
-			<label class="col-lg-2 control-label" for="new-password">
-				<i class="fa fa-lock"></i>
-				请输入新密码
-			</label>
-			<div class="col-lg-10">
-			  <input class="input-xlarge span5" ng-model="$parent.newPassword" type="password" required>
-			</div>
-			<label class="col-lg-2 control-label" for="new-password">
-				<i class="fa fa-lock"></i>
-				请重复输入一遍上面的密码
-			</label>
-			<div class="col-lg-10">
-			  <input class="input-xlarge span5" ng-model="$parent.passwordConfirmation" type="password" required>
-			</div>
-	  </div>
-    <alert type="alert.type" ng-hide="!alert" close="closeAlert()">{{alert.msg}}</alert>
+        <form class="form-horizontal">
+            <div class="form-group">
+                <div></div>
+                <label class="col-sm-4 control-label" for="new-password">
+                    <i class="fa fa-lock"></i>
+                    请输入新密码
+                </label>
+                <div class="col-lg-8">
+                    <input class="form-control" ng-model="$parent.newPassword" type="password" required>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-4 control-label" for="new-password">
+                    <i class="fa fa-lock"></i>
+                    再次输入新密码
+                </label>
+
+                <div class="col-lg-8">
+                    <input class="form-control" ng-model="$parent.passwordConfirmation" type="password" required>
+                </div>
+            </div>
+            <alert type="alert.type" ng-hide="!alert" close="closeAlert()">{{alert.msg}}</alert>
 	</div>
 	<div class="modal-footer">
-		<a class="btn" ng-click="cancel()">关闭</a>
+		<a class="btn btn-success" ng-click="cancel()">关闭</a>
 		<a class="btn btn-primary" ng-click="setPassword()">修改密码</a>
 	</div>
 </script>
 <!-- End: Setting Password -->
+
+<!-- Start: Setting UserProfile -->
+<script type="text/ng-template" id="userProfileDialog.html">
+    <div class="modal-header">
+
+        <div class="row">
+            <div class="col-xs-2"><h3>用户详情</h3></div>
+            <div class="col-xs-8"></div>
+            <div class="col-xs-2"><img ng-src={{profileAvatar}} alt="Avatar" class="img-circle"></div>
+        </div>
+    </div>
+    <div class="modal-body">
+        <div class="row">
+            <table class="table table-striped">
+                <tbody>
+                <tr ng-repeat="field in profileFields">
+                    <td class="center"><h3>{{field.title}}</h3></td>
+                    <td class="center">
+                        <h3 ng-if="field.value">{{field.value(me)}}</h3>
+                        <h3 ng-if="!field.value">{{valueOfKeyString(me, field.name)}}</h3>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <a class="btn btn-primary" ng-click="cancel()">关闭</a>
+    </div>
+</script>
+<!-- End: Setting UserProfile -->
