--- a/app/views/home.html
+++ b/app/views/home.html
@@ -9,9 +9,9 @@
 				<form class="form-horizontal" autofill-submit="login()" ui-keypress="{13:'Login($event)'}">
 					<fieldset>
 					
-						<input class="input-large col-xs-12" ng-model="loginUser.username" name="username" type="text" placeholder="用户名" required />
+						<input class="input-large col-xs-12" style="background-color:#383e4b" ng-model="loginUser.username" name="username" type="text" placeholder="用户名" required />
 
-						<input class="input-large col-xs-12" ng-model="loginUser.password" name="password" type="password" placeholder="密码" required />
+						<input class="input-large col-xs-12" style="background-color:#383e4b" ng-model="loginUser.password" name="password" type="password" placeholder="密码" required />
 
 						<div class="clearfix"></div>
 					
