fix 库存的商品编码 close #118

--- a/app/views/basicList.html
+++ b/app/views/basicList.html
@@ -113,7 +113,7 @@
                 </li>
             </td>
             <td ng-show="showCbx">
-                <input type="checkbox" ng-checked="checked">
+                <input type="checkbox" ng-checked="checked" ng-model="checked">
             </td>
         </tr>
         </tbody>
