解决google chart红色警告， close #117

--- a/app/views/analysis/skusAnalysis.html
+++ b/app/views/analysis/skusAnalysis.html
@@ -94,7 +94,7 @@
                         <div google-chart="" chart="offChart" style="{{offChart.cssStyle}}"
                              on-ready="chartReady()"></div>
                     </div>
-                    <div ng-class="primaryChartFull" style="text-align: right">
+                    <div ng-class="primaryChartFull" ng-show="showPrimaryChart" style="text-align: right">
                         <div google-chart="" chart="primaryChart" style="{{primaryChart.cssStyle}}"
                              on-ready="chartReady()"></div>
                     </div>
