‘添加批量删除接口’

--- a/app/views/basicList.html
+++ b/app/views/basicList.html
@@ -113,7 +113,7 @@
                 </li>
             </td>
             <td ng-show="showCbx">
-                <input type="checkbox" ng-checked="checked" ng-model="checked">
+                <input type="checkbox" name="chbox" value="{{entity.id}}" ng-checked="checked">
             </td>
         </tr>
         </tbody>
